name:                herzog
version:             1.0
synopsis:            The dead-simple weblog engine
homepage:            https://github.com/hlian/herzog
license:             MIT
license-file:        LICENSE
author:              Hao Lian
maintainer:          hi@haolian.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable herzog
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , base-prelude
                     , lucid
                     , process
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
